[package]
name = "GBVSR-frame_meter_update"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
scraper = "0.23.1"
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
zip-extract = "0.4.0"
